[gd_scene load_steps=4 format=3 uid="uid://quest_board_screen_uid"]

[ext_resource type="Script" path="res://scripts/screens/quest_board_screen.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://bdo2y3r4q5w6e" path="res://scenes/ui/dice_pool.tscn" id="2_dicepool"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wood"]
bg_color = Color(0.3, 0.2, 0.1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.2, 0.1, 0.05, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="QuestBoardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(900, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wood")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Header" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Town Notice Board"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = -20.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
text = "Back"

[node name="Content" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="QuestsContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="DicePoolContainer" type="CenterContainer" parent="Panel/VBoxContainer/Content"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="DicePool" parent="Panel/VBoxContainer/Content/DicePoolContainer" instance=ExtResource("2_dicepool")]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "Confirm Allocation"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[connection signal="pressed" from="Panel/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]